--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,8 @@
 <script type="text/javascript">
 MathJax = {
   tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']],   // enable inline math
+    displayMath: [['$$','$$'], ['\\[','\\]']], // block math
     packages: {'[+]': ['ams', 'amssymb', 'physics', 'mathtools']}
   }
 };
@@ -8,3 +10,4 @@ MathJax = {
 <script type="text/javascript" async
  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 </script>
+
